# pypkgs_pg

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_pg.rst
pypkgs_pg/: pypkgs_pg.py
tests/: test_pypkgs_pg.py
