[tool.poetry]
name = "pypkgs_pg"
version = "0.1.0"
description = "Evidence that I have made a package"
authors = ["Peter Gysbers <pgysbers74@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
